<resources>
    <string name="app_name">Footards</string>
    <string name="create">create</string>
    <string name="join">join</string>
    <string name="name">Enter Your Name</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="waitingtext">Waiting for someone to join...</string>
    <string name="leave">Leave Room</string>
    <string name="stats1">Statistic1</string>
    <string name="statsvalue1">value1</string>
    <string name="statsvalue2">value2</string>
    <string name="statsvalue3">value3</string>
    <string name="statsvalue4">value4</string>
    <string name="statsvalue5">value5</string>
    <string name="statsvalue6">value6</string>
    <string name="username">UserName</string>
    <string name="cards">30</string>
</resources>
